--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "homepage": "http://angielt.github.io/react-test",
   "dependencies": {
     "bootstrap": "^4.3.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.2"
+    "react": "^16.10.1",
+    "react-bootstrap": "^1.0.0-beta.12",
+    "react-button-group": "^1.0.2",
+    "react-dom": "^16.10.1",
+    "react-scripts": "3.1.2",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
