--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-button-group": "^1.0.2",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
+    "react-scroll": "^1.7.16",
     "reactstrap": "^8.0.1",
     "semantic-ui": "^2.4.2"
   },
