--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "angielt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://angielt.github.io/site",
+  "homepage": "http://angielt.github.io",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.10.1",
@@ -11,8 +11,10 @@
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2",
     "react-scroll": "^1.7.16",
+    "react-vivus": "0.0.2",
     "reactstrap": "^8.0.1",
-    "semantic-ui": "^2.4.2"
+    "semantic-ui": "^2.4.2",
+    "vivus": "^0.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
