--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "angielt",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://angielt.github.io",
+  "homepage": "http://angielt.github.io/site",
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "react": "^16.10.1",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "bootstrap": "^4.6.0",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.5.0",
     "react-button-group": "^1.0.2",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.14.0",
     "react-scripts": "3.1.2",
-    "react-scroll": "^1.7.16",
+    "react-scroll": "^1.8.1",
     "react-vivus": "0.0.2",
-    "reactstrap": "^8.0.1",
+    "reactstrap": "^8.9.0",
     "semantic-ui": "^2.4.2",
     "vivus": "^0.4.5"
   },
@@ -40,6 +40,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.2.0"
   }
 }
